mobile views are made but defo changes to little functionality

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Delevia||Find Jobs"
 APP_ENV=local
 APP_KEY=base64:Sln8MjNBGFa8BdBmwMhpEAZzXgD4Dy4tu+O+G9DLsUw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
